--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,11 @@
+[General]
+# If yes, additional info will be printed to the console
+debug = false
+
+# If not empty, debug logging will go to the entered path.
+# Must be .csv file extension.
+debug_file_path = "C:\temp\auto_ripper_debug.csv"
+
 [MakeMKV]
 # Where is MakeMKV installed
 install_path = "C:\Program Files (x86)\MakeMKV"
@@ -6,5 +14,5 @@ install_path = "C:\Program Files (x86)\MakeMKV"
 # Must be a fully qualified absolute path, relative paths and environment variables are not supported
 mkv_path = "C:\temp"
 
-# Minimum title length in seconds to be backed up (overwrites MakeMKV's own config)
+# Minimum title length in seconds to be backed up (overwrites MakeMKV's config)
 minimum_length_seconds = 120
